syntax = "proto3";

option java_multiple_files = true;
package proto;

message NewInterestProto{
 	 string userId = 1;
     string description = 2;
}

message NewInterestResponseProto{
	 int64 id = 1;
     string description = 2;
     string status = 3;
}

message RemoveInterestProto{
     int64 id = 1;
     string userId = 2;
}

message RemoveInterestResponseProto{
     string status = 1;
}

message JobAdRequestProto {
  string userId = 1;
  string title = 2;
  string position = 3;
  string description = 4;
  string company = 5;
  repeated string requirements = 6;
}

message UserIdRequestProto{
  string userId = 1;
}

message JobAdRecommendationsResponseProto{
  repeated JobAdRequestProto recommendations = 1;
  string status = 2;
}