syntax = "proto3";

option java_multiple_files = true;
package proto;
import "interestModel.proto";

service JobRecommendationGrpcService{
  rpc add (NewInterestProto) returns (RemoveInterestResponseProto);
  rpc addJob(JobAdRequestProto) returns(RemoveInterestResponseProto);
  rpc findRecommendations(UserIdRequestProto) returns(JobAdRecommendationsResponseProto);
}